--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "youtube-channel-finder",
+  "name": "youtube-channel-finder-backend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^3.3.0"
   }
 }
